--- a/side_computer/MyBOmain/configs/base.yaml
+++ b/side_computer/MyBOmain/configs/base.yaml
@@ -5,9 +5,10 @@ override: False
 experiment_group: test
 experiment_name: ${task.name}_${acq.name}_run_${seed}
 save: True
-save_path: results/${experiment_group}/${task.name}/${acq.name}_${seed}
+save_path: results/${experiment_group}/${task.name}/${acq.name}/seed${seed}
 batch_size: 1
 max_rounds: 0
+aux_task: []
 
 defaults:
   - model: singletask
